# netplayroom-manager

./: CMakeLists.txt  README.md  build.sh  conanfile.txt
src/: ClientHandler.cpp  ClientHandler.hpp  RoomManager.cpp  RoomManager.hpp  TcpSocketHandler.cpp  TcpSocketHandler.hpp  main.cpp
